Closed Bug 1482988 Opened 7 years ago Closed 7 years ago

Crash in void NS_QueryNotificationCallbacks<T>

Categories

(Core :: DOM: Core & HTML, defect)

Unspecified
macOS
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla63
Tracking Status
firefox-esr52 --- unaffected
firefox-esr60 --- unaffected
firefox61 --- unaffected
firefox62 --- unaffected
firefox63 --- fixed

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

(Blocks 1 open bug)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is report bp-8c8dfc29-21e2-4a57-a4d4-9f7c30180813. ============================================================= Top 10 frames of crashing thread: 0 XUL void NS_QueryNotificationCallbacks<nsIChannel> netwerk/base/nsNetUtil.h:624 1 XUL ThirdPartyUtil::GetTopWindowForChannel netwerk/base/nsNetUtil.h:647 2 XUL nsContentUtils::StorageDisabledByAntiTracking dom/base/nsContentUtils.cpp:8937 3 XUL mozilla::image::ImageCacheKey::GetSpecialCaseDocumentToken image/ImageCacheKey.cpp:155 4 XUL mozilla::image::ImageCacheKey::ImageCacheKey image/ImageCacheKey.cpp:48 5 XUL imgLoader::LoadImage image/imgLoader.cpp:2349 6 XUL nsContentUtils::LoadImage dom/base/nsContentUtils.cpp:3633 7 XUL nsImageLoadingContent::LoadImage dom/base/nsImageLoadingContent.cpp:1040 8 XUL nsImageLoadingContent::LoadImage dom/base/nsImageLoadingContent.cpp:916 9 XUL mozilla::dom::HTMLImageElement::AfterMaybeChangeAttr dom/html/HTMLImageElement.cpp:470 =============================================================
Blocks: 1475697
Keywords: regression
Comment on attachment 8999726 [details] [diff] [review] Handle null arguments in nsContentUtils::StorageDisabledByAntiTracking correctly GetOuterWindow may return null, please null check. (I wouldn't be surprised this method being called after unlink) Would be nice to document in .h that either aWindow or aChannel can be null.
Attachment #8999726 - Flags: review?(bugs) → review+
Pushed by eakhgari@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/f93a51060a07 Handle null arguments in nsContentUtils::StorageDisabledByAntiTracking correctly; r=smaug
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
Depends on: 1483604
No longer depends on: 1483604
Component: DOM → DOM: Core & HTML
Blocks: 1580351
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: