Bug 1482988 - Handle null arguments in nsContentUtils::StorageDisabledByAntiTracking correctly; r=smaug