dom/base/nsContentUtils.h
@@ -2953,6 +2953,7 @@ public:
   /*
    * Returns true if this window/channel/aPrincipal should disable storages
    * because of the anti-tracking feature.
+   * Note that either aWindow or aChannel may be null when calling this function.
    */
   static bool StorageDisabledByAntiTracking(nsPIDOMWindowInner* aWindow,
                                             nsIChannel* aChannel,
